--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -445,5 +445,68 @@
             class="org.eclipsetrader.ui.internal.LaunchersStartup">
       </startup>
    </extension>
+   <extension
+         point="org.eclipse.ui.propertyPages">
+      <page
+            class="org.eclipsetrader.ui.internal.securities.properties.IdentifierProperties"
+            id="org.eclipsetrader.ui.propertypages.identifier"
+            name="Identifier">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipsetrader.core.instruments.Security">
+            </instanceof>
+         </enabledWhen>
+      </page>
+      <page
+            class="org.eclipsetrader.ui.internal.securities.properties.MarketsProperties"
+            id="org.eclipsetrader.ui.propertypages.markets"
+            name="Markets">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipsetrader.core.instruments.Security">
+            </instanceof>
+         </enabledWhen>
+      </page>
+      <page
+            class="org.eclipsetrader.ui.internal.securities.properties.ConnectorOverrideProperties"
+            id="org.eclipsetrader.ui.propertypages.overrides"
+            name="Overrides">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipsetrader.core.instruments.Security">
+            </instanceof>
+         </enabledWhen>
+      </page>
+      <page
+            class="org.eclipsetrader.ui.internal.markets.ConnectorsPage"
+            id="org.eclipsetrader.ui.propertypages.markets.connectors"
+            name="Connectors">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipsetrader.core.internal.markets.Market">
+            </instanceof>
+         </enabledWhen>
+      </page>
+      <page
+            class="org.eclipsetrader.ui.internal.markets.HolidaysPage"
+            id="org.eclipsetrader.ui.propertypages.markets.holidays"
+            name="Holidays">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipsetrader.core.internal.markets.Market">
+            </instanceof>
+         </enabledWhen>
+      </page>
+      <page
+            class="org.eclipsetrader.ui.internal.markets.MembersPage"
+            id="org.eclipsetrader.ui.propertypages.markets.members"
+            name="Members">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipsetrader.core.internal.markets.Market">
+            </instanceof>
+         </enabledWhen>
+      </page>
+   </extension>
 
 </plugin>
