Initial alerts core engine implementation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1455 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.core.trading/plugin.xml
+++ b/org.eclipsetrader.core.trading/plugin.xml
@@ -2,5 +2,6 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension-point id="org.eclipsetrader.core.trading.systems" name="Trading Systems" schema="schema/systems.exsd"/>
+   <extension-point id="org.eclipsetrader.core.trading.alerts" name="Alerts" schema="schema/alerts.exsd"/>
 
 </plugin>
