--- a/org.eclipsetrader.ui.trading/plugin.xml
+++ b/org.eclipsetrader.ui.trading/plugin.xml
@@ -29,6 +29,12 @@
                optional="true">
          </commandParameter>
       </command>
+      <command
+            defaultHandler="org.eclipsetrader.internal.ui.trading.ResetTriggeredAlerts"
+            description="Resets the triggered alerts"
+            id="org.eclipsetrader.ui.alerts.reset"
+            name="Reset Alerts">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -73,6 +79,89 @@
             </visibleWhen>
          </menu>
       </menuContribution>
+      <menuContribution
+            locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+         <command
+               commandId="org.eclipsetrader.ui.alerts.reset"
+               label="Reset Alerts">
+            <visibleWhen>
+               <and>
+                  <count
+                        value="1">
+                  </count>
+                  <iterate>
+                     <adapt
+                           type="org.eclipsetrader.core.instruments.ISecurity">
+                     </adapt>
+                  </iterate>
+               </and>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.propertyPages">
+      <page
+            class="org.eclipsetrader.internal.ui.trading.AlertPropertyPage"
+            id="org.eclipsetrader.ui.trading.propertypages.alerts"
+            name="Alerts">
+         <enabledWhen>
+            <adapt
+                  type="org.eclipsetrader.core.instruments.Security">
+            </adapt>
+         </enabledWhen>
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.ui.propertyPages">
+      <page
+            class="org.eclipsetrader.internal.ui.trading.TargetPricePropertyPage"
+            id="org.eclipsetrader.ui.trading.alertpropertypages.targetprice"
+            name="Target Price">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipsetrader.core.internal.trading.TargetPrice">
+            </instanceof>
+         </enabledWhen>
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.eclipsetrader.internal.ui.trading.EarlyStartup">
+      </startup>
+   </extension>
+   <extension
+         point="org.eclipse.ui.newWizards">
+      <category
+            id="org.eclipsetrader.ui.trading.alerts"
+            name="Alerts">
+      </category>
+      <wizard
+            category="org.eclipsetrader.ui.trading.alerts"
+            class="org.eclipsetrader.internal.ui.trading.TargetPriceWizard"
+            icon="icons/eview16/bell.png"
+            id="org.eclipsetrader.ui.trading.targetprice.alert"
+            name="Target Price">
+         <description>
+            Create a new Target Price alert.
+         </description>
+      </wizard>
+   </extension>
+   <extension
+         point="org.eclipse.ui.decorators">
+      <decorator
+            class="org.eclipsetrader.internal.ui.trading.WatchlistAlertDecorator"
+            id="org.eclipsetrader.ui.alerts.decorator"
+            label="Alert Decorator"
+            lightweight="true"
+            state="true">
+         <enablement>
+            <objectClass
+                  name="org.eclipsetrader.ui.internal.views.WatchListViewItem">
+            </objectClass>
+         </enablement>
+      </decorator>
    </extension>
 
 </plugin>
