Added missing extension definition
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1458 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.core.trading/plugin.xml
+++ b/org.eclipsetrader.core.trading/plugin.xml
@@ -3,5 +3,13 @@
 <plugin>
    <extension-point id="org.eclipsetrader.core.trading.systems" name="Trading Systems" schema="schema/systems.exsd"/>
    <extension-point id="org.eclipsetrader.core.trading.alerts" name="Alerts" schema="schema/alerts.exsd"/>
+   <extension
+         point="org.eclipsetrader.core.trading.alerts">
+      <alert
+            class="org.eclipsetrader.core.internal.trading.TargetPrice"
+            id="org.eclipsetrader.core.trading.alerts.targetprice"
+            name="Target Price">
+      </alert>
+   </extension>
 
 </plugin>
