--- a/org.eclipsetrader.ui.charts.indicators/build.properties
+++ b/org.eclipsetrader.ui.charts.indicators/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                epl-v10.html,\
-               plugin.xml
+               plugin.xml,\
+               icons/
