--- a/org.eclipsetrader.ui/build.properties
+++ b/org.eclipsetrader.ui/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                epl-v10.html,\
                plugin.xml,\
                icons/,\
-               plugin.properties
+               plugin.properties,\
+               schema/
