--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
+   <extension-point id="org.eclipsetrader.ui.viewLabelProviders" name="View Label Providers" schema="schema/viewLabelProviders.exsd"/>
    <extension
          point="org.eclipse.ui.perspectives">
       <perspective
