Refactored orders view using contributions from view label providers extensions
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1461 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.trading/plugin.xml
+++ b/org.eclipsetrader.ui.trading/plugin.xml
@@ -163,5 +163,111 @@
          </enablement>
       </decorator>
    </extension>
+   <extension
+         point="org.eclipsetrader.ui.viewLabelProviders">
+      <viewContribution
+            id="org.eclipsetrader.ui.orders.viewContribution"
+            targetID="org.eclipsetrader.ui.views.orders">
+         <provider
+               class="org.eclipsetrader.ui.trading.AccountColumn"
+               id="org.eclipsetrader.ui.trading.orders.account"
+               name="Account">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.AveragePriceColumn"
+               id="org.eclipsetrader.ui.trading.orders.averageprice"
+               name="Avg. Price"
+               orientation="right">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.BrokerMessageColumn"
+               id="org.eclipsetrader.ui.trading.orders.message"
+               name="Message">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.BrokerNameColumn"
+               id="org.eclipsetrader.ui.trading.orders.broker"
+               name="Broker">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.DateTimeColumn"
+               id="org.eclipsetrader.ui.trading.orders.datetime"
+               name="Date / Time">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.ExpireDateColumn"
+               id="org.eclipsetrader.ui.trading.orders.expire"
+               name="Expire">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.FilledQuantityColumn"
+               id="org.eclipsetrader.ui.trading.orders.filledqty"
+               name="Filled Q.ty"
+               orientation="right">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.OrderIdColumn"
+               id="org.eclipsetrader.ui.trading.orders.orderid"
+               name="Id">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.PriceColumn"
+               id="org.eclipsetrader.ui.trading.orders.price"
+               name="Price"
+               orientation="right">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.QuantityColumn"
+               id="org.eclipsetrader.ui.trading.orders.qty"
+               name="Q.ty">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.ReferenceColumn"
+               id="org.eclipsetrader.ui.trading.orders.reference"
+               name="Reference">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.RouteColumn"
+               id="org.eclipsetrader.ui.trading.orders.route"
+               name="Route">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.SecurityNameColumn"
+               id="org.eclipsetrader.ui.trading.orders.security"
+               name="Security">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.SideColumn"
+               id="org.eclipsetrader.ui.trading.orders.side"
+               name="Side">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.StatusColumn"
+               id="org.eclipsetrader.ui.trading.orders.status"
+               name="Status">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.StopPriceColumn"
+               id="org.eclipsetrader.ui.trading.orders.stopprice"
+               name="Stop Price"
+               orientation="right">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.SymbolColumn"
+               id="org.eclipsetrader.ui.trading.orders.symbol"
+               name="Symbol">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.TypeColumn"
+               id="org.eclipsetrader.ui.trading.orders.type"
+               name="Type">
+         </provider>
+         <provider
+               class="org.eclipsetrader.ui.trading.ValidityColumn"
+               id="org.eclipsetrader.ui.trading.orders.validity"
+               name="Validity">
+         </provider>
+      </viewContribution>
+   </extension>
 
 </plugin>
