Core trading interfaces and implementations moved from core to core.trading plugin
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1471 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.trading/plugin.xml
+++ b/org.eclipsetrader.ui.trading/plugin.xml
@@ -111,6 +111,16 @@
             </adapt>
          </enabledWhen>
       </page>
+      <page
+            class="org.eclipsetrader.internal.ui.trading.MarketTradingPage"
+            id="org.eclipsetrader.ui.trading.market"
+            name="Trading">
+         <enabledWhen>
+            <adapt
+                  type="org.eclipsetrader.core.markets.IMarket">
+            </adapt>
+         </enabledWhen>
+      </page>
    </extension>
    <extension
          point="org.eclipse.ui.propertyPages">
