--- a/org.eclipsetrader.core.trading/plugin.xml
+++ b/org.eclipsetrader.core.trading/plugin.xml
@@ -4,6 +4,14 @@
    <extension-point id="org.eclipsetrader.core.trading.systems" name="Trading Systems" schema="schema/systems.exsd"/>
    <extension-point id="org.eclipsetrader.core.trading.alerts" name="Alerts" schema="schema/alerts.exsd"/>
    <extension
+         point="org.eclipsetrader.core.launchers">
+      <launcher
+            class="org.eclipsetrader.core.internal.trading.TradingServiceLauncher"
+            id="org.eclipsetrader.trading.launcher"
+            name="Trading Service">
+      </launcher>
+   </extension>
+   <extension
          point="org.eclipsetrader.core.trading.alerts">
       <alert
             class="org.eclipsetrader.core.internal.trading.TargetPrice"
