--- a/org.eclipsetrader.ui.charts/build.properties
+++ b/org.eclipsetrader.ui.charts/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                data/,\
-               schema/
+               schema/,\
+               plugin.properties
