--- a/org.eclipsetrader.ui.trading/plugin.xml
+++ b/org.eclipsetrader.ui.trading/plugin.xml
@@ -8,32 +8,32 @@
             class="org.eclipsetrader.internal.ui.trading.OrdersView"
             icon="icons/eview16/orders.png"
             id="org.eclipsetrader.ui.views.orders"
-            name="Orders">
+            name="%orders.view.name">
       </view>
    </extension>
    <extension
          point="org.eclipse.ui.commands">
       <category
             id="org.eclipsetrader.ui.trade.category"
-            name="Trade">
+            name="%trade.category.name">
       </category>
       <command
             categoryId="org.eclipse.ui.category.navigate"
             defaultHandler="org.eclipsetrader.internal.ui.trading.TradeHandler"
-            description="Trade the selected security"
+            description="%trade.command.description"
             id="org.eclipsetrader.ui.file.trade"
-            name="Trade">
+            name="%trade.command.name">
          <commandParameter
                id="broker"
-               name="Broker"
+               name="%trade.command.broker.parameter.name"
                optional="true">
          </commandParameter>
       </command>
       <command
             defaultHandler="org.eclipsetrader.internal.ui.trading.ResetTriggeredAlerts"
-            description="Resets the triggered alerts"
+            description="%resetalerts.command.description"
             id="org.eclipsetrader.ui.alerts.reset"
-            name="Reset Alerts">
+            name="%resetalerts.command.name">
       </command>
    </extension>
    <extension
@@ -42,7 +42,7 @@
             locationURI="popup:org.eclipse.ui.popup.any?after=group.trade">
          <command
                commandId="org.eclipsetrader.ui.file.trade"
-               label="Trade">
+               label="%trade.menu.label">
             <visibleWhen>
                <and>
                   <count
@@ -61,7 +61,7 @@
             locationURI="popup:org.eclipse.ui.popup.any?after=group.tradeWith">
          <menu
                id="org.eclipsetrader.ui.file.trade"
-               label="Trade With">
+               label="%tradewith.menu.label">
             <separator
                   name="additions">
             </separator>
@@ -83,7 +83,7 @@
             locationURI="popup:org.eclipse.ui.popup.any?after=additions">
          <command
                commandId="org.eclipsetrader.ui.alerts.reset"
-               label="Reset Alerts">
+               label="%resetalerts.menu.label">
             <visibleWhen>
                <and>
                   <count
@@ -104,7 +104,7 @@
       <page
             class="org.eclipsetrader.internal.ui.trading.AlertPropertyPage"
             id="org.eclipsetrader.ui.trading.propertypages.alerts"
-            name="Alerts">
+            name="%alerts.propertypage.name">
          <enabledWhen>
             <adapt
                   type="org.eclipsetrader.core.instruments.Security">
@@ -114,7 +114,7 @@
       <page
             class="org.eclipsetrader.internal.ui.trading.MarketTradingPage"
             id="org.eclipsetrader.ui.trading.market"
-            name="Trading">
+            name="%markettrading.propertypage.name">
          <enabledWhen>
             <adapt
                   type="org.eclipsetrader.core.markets.IMarket">
@@ -127,7 +127,7 @@
       <page
             class="org.eclipsetrader.internal.ui.trading.TargetPricePropertyPage"
             id="org.eclipsetrader.ui.trading.alertpropertypages.targetprice"
-            name="Target Price">
+            name="%targetprice.propertypage.name">
          <enabledWhen>
             <instanceof
                   value="org.eclipsetrader.core.internal.trading.TargetPrice">
@@ -145,16 +145,16 @@
          point="org.eclipse.ui.newWizards">
       <category
             id="org.eclipsetrader.ui.trading.alerts"
-            name="Alerts">
+            name="%alerts.wizard.category.name">
       </category>
       <wizard
             category="org.eclipsetrader.ui.trading.alerts"
             class="org.eclipsetrader.internal.ui.trading.TargetPriceWizard"
             icon="icons/eview16/bell.png"
             id="org.eclipsetrader.ui.trading.targetprice.alert"
-            name="Target Price">
+            name="%targetprice.wizard.name">
          <description>
-            Create a new Target Price alert.
+            %targetprice.alerts.description
          </description>
       </wizard>
    </extension>
@@ -163,7 +163,7 @@
       <decorator
             class="org.eclipsetrader.internal.ui.trading.WatchlistAlertDecorator"
             id="org.eclipsetrader.ui.alerts.decorator"
-            label="Alert Decorator"
+            label="%alerts.decorator.label"
             lightweight="true"
             state="true">
          <enablement>
@@ -181,101 +181,101 @@
          <provider
                class="org.eclipsetrader.ui.trading.AccountColumn"
                id="org.eclipsetrader.ui.trading.orders.account"
-               name="Account">
+               name="%account.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.AveragePriceColumn"
                id="org.eclipsetrader.ui.trading.orders.averageprice"
-               name="Avg. Price"
+               name="%averageprice.provider.name"
                orientation="right">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.BrokerMessageColumn"
                id="org.eclipsetrader.ui.trading.orders.message"
-               name="Message">
+               name="%message.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.BrokerNameColumn"
                id="org.eclipsetrader.ui.trading.orders.broker"
-               name="Broker">
+               name="%broker.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.DateTimeColumn"
                id="org.eclipsetrader.ui.trading.orders.datetime"
-               name="Date / Time">
+               name="%datetime.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.ExpireDateColumn"
                id="org.eclipsetrader.ui.trading.orders.expire"
-               name="Expire">
+               name="%expire.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.FilledQuantityColumn"
                id="org.eclipsetrader.ui.trading.orders.filledqty"
-               name="Filled Q.ty"
+               name="%filledqty.provider.name"
                orientation="right">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.OrderIdColumn"
                id="org.eclipsetrader.ui.trading.orders.orderid"
-               name="Id">
+               name="%orderid.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.PriceColumn"
                id="org.eclipsetrader.ui.trading.orders.price"
-               name="Price"
+               name="%price.provider.name"
                orientation="right">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.QuantityColumn"
                id="org.eclipsetrader.ui.trading.orders.qty"
-               name="Q.ty">
+               name="%qty.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.ReferenceColumn"
                id="org.eclipsetrader.ui.trading.orders.reference"
-               name="Reference">
+               name="%reference.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.RouteColumn"
                id="org.eclipsetrader.ui.trading.orders.route"
-               name="Route">
+               name="%route.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.SecurityNameColumn"
                id="org.eclipsetrader.ui.trading.orders.security"
-               name="Security">
+               name="%security.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.SideColumn"
                id="org.eclipsetrader.ui.trading.orders.side"
-               name="Side">
+               name="%side.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.StatusColumn"
                id="org.eclipsetrader.ui.trading.orders.status"
-               name="Status">
+               name="%status.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.StopPriceColumn"
                id="org.eclipsetrader.ui.trading.orders.stopprice"
-               name="Stop Price"
+               name="%stopprice.provider.name"
                orientation="right">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.SymbolColumn"
                id="org.eclipsetrader.ui.trading.orders.symbol"
-               name="Symbol">
+               name="%symbol.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.TypeColumn"
                id="org.eclipsetrader.ui.trading.orders.type"
-               name="Type">
+               name="%type.provider.name">
          </provider>
          <provider
                class="org.eclipsetrader.ui.trading.ValidityColumn"
                id="org.eclipsetrader.ui.trading.orders.validity"
-               name="Validity">
+               name="%validity.provider.name">
          </provider>
       </viewContribution>
    </extension>
