Added limit price and order side parameters to trade command
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1476 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.trading/plugin.xml
+++ b/org.eclipsetrader.ui.trading/plugin.xml
@@ -28,6 +28,16 @@
                name="%trade.command.broker.parameter.name"
                optional="true">
          </commandParameter>
+         <commandParameter
+               id="limitPrice"
+               name="Limit Price"
+               optional="true">
+         </commandParameter>
+         <commandParameter
+               id="side"
+               name="Side"
+               optional="true">
+         </commandParameter>
       </command>
       <command
             defaultHandler="org.eclipsetrader.internal.ui.trading.ResetTriggeredAlerts"
