Grouped bar, candles and line chart to a single object factory used to plot the main chart, added main chart properties page
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1479 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.charts/plugin.xml
+++ b/org.eclipsetrader.ui.charts/plugin.xml
@@ -337,5 +337,18 @@
             class="org.eclipsetrader.ui.internal.charts.EarlyStartup">
       </startup>
    </extension>
-
+   <extension
+         point="org.eclipse.ui.propertyPages">
+      <page
+            class="org.eclipsetrader.ui.internal.charts.views.MainPropertiesPage"
+            id="org.eclipsetrader.ui.charts.default.general"
+            name="General">
+         <enabledWhen>
+               <test
+                     property="org.eclipsetrader.ui.adapts"
+                     value="org.eclipsetrader.ui.internal.charts.views.MainChartFactory">
+               </test>
+         </enabledWhen>
+      </page>
+    </extension>
 </plugin>
